@@ -601,6 +601,94 @@ my $protono;
  Anchor
 /;
 
+
+# used for the X3D Parser only. Return type of node.
+%VRML::X3DNodes::defaultContainerType = (
+	Anchor 			=>children,
+	Appearance 		=>appearance,
+	AudioClip 		=>children,
+	Background 		=>children,
+	Billboard 		=>children,
+	Box 			=>geometry,
+	Collision 		=>children,
+	Color 			=>color,
+	ColorInterpolator 	=>children,
+	ColorRGBA 		=>color,
+	Cone 			=>geometry,
+	Contour2D 		=>geometry,
+	Coordinate 		=>coord,
+	CoordinateDeformer 	=>children,
+	CoordinateInterpolator 	=>children,
+	Cylinder 		=>geometry,
+	CylinderSensor 		=>children,
+	DirectionalLight 	=>children,
+	ElevationGrid 		=>geometry,
+	Extrusion 		=>geometry,
+	Fog 			=>children,
+	FontStyle 		=>children,
+	GeoCoordinate 		=>children,
+	GeoElevationGrid 	=>geometry,
+	GeoLocation 		=>children,
+	GeoLOD 			=>children,
+	GeoMetadata		=>children,
+	GeoOrigin 		=>children,
+	GeoPositionInterpolator	=>children,
+	GeoTouchSensor		=>children,
+	GeoViewpoint 		=>children,
+	Group 			=>children,
+	ImageTexture 		=>texture,
+	IndexedFaceSet 		=>geometry,
+	IndexedLineSet 		=>geometry,
+	IndexedTriangleFanSet 	=>geometry,
+	IndexedTriangleSet 	=>geometry,
+	IndexedTriangleStripSet	=>geometry,
+	Inline 			=>children,
+	InlineLoadControl 	=>children,
+	LineSet 		=>geometry,
+	LOD 			=>children,
+	Material 		=>material,
+	MovieTexture 		=>texture,
+	NavigationInfo 		=>children,
+	Normal 			=>normal,
+	NormalInterpolator 	=>children,
+	NurbsCurve2D 		=>geometry,
+	NurbsCurve 		=>geometry,
+	NurbsGroup 		=>children,
+	NurbsPositionInterpolator=>children,
+	NurbsSurface 		=>children,
+	NurbsTextureSurface 	=>children,
+	OrientationInterpolator	=>children,
+	PixelTexture 		=>texture,
+	PlaneSensor 		=>children,
+	PointLight 		=>children,
+	PointSet 		=>geometry,
+	PolyLine2D 		=>geometry,
+	PositionInterpolator 	=>children,
+	ProximitySensor 	=>children,
+	ScalarInterpolator 	=>children,
+	Scene 			=>children,
+	Script 			=>children,
+	Shape 			=>children,
+	Sound 			=>children,
+	Sphere 			=>geometry,
+	SphereSensor 		=>children,
+	SpotLight 		=>children,
+	Switch 			=>children,
+	Text 			=>geometry,
+	TextureCoordinate 	=>texCoord,
+	TextureTransform 	=>texture,
+	TimeSensor 		=>children,
+	TouchSensor 		=>children,
+	Transform 		=>children,
+	TriangleFanSet 		=>geometry,
+	TriangleSet 		=>geometry,
+	TriangleStripSet 	=>geometry,
+	TrimmedSurface 		=>children,
+	Viewpoint 		=>children,
+	VisibilitySensor 	=>children,
+	WorldInfo 		=>children,
+);
+
 %VRML::Nodes = (
 	# Internal structures, to store def and use in the right way
 	DEF =>
